hphp/test/zend/bad/ext/zlib/tests/ob_002.php
<?php
$_ENV[HTTP_ACCEPT_ENCODING] = gzip;

ini_set("zlib.output_compression", 0);
echo "hi\n";
?>